# yabot

./: AGENTS.md  Makefile  README.md  main.py  pyproject.toml
matrix_bot/: __init__.py  cross_signing.py  matrix.py
scripts/: render_graph.py
skills/: skill-creator.md  skill-editor.md
tests/: conftest.py  test_checkpoint.py  test_cli.py  test_cli_daemon_autostart.py  test_commands.py  test_daemon.py  test_handler.py  test_integration_openai.py  test_skills.py  test_state.py  test_streams.py  test_system_prompt_update.py  test_tokens.py  test_tool_approvals.py  test_tools.py  test_trace_logging.py
yabot/: __init__.py  agent_tools.py  app.py  checkpoint.py  cli.py  cli_runtime.py  commands.py  config.py  cross_signing.py  daemon.py  graph.py  handler.py  interaction.py  llm.py  matrix.py  matrix_app.py  models.json  remote.py  runtime.py  skills.py  state.py  storage.py  streams.py  system_prompt.py  tokens.py  tools.py  trace.py  util.py  ws_protocol.py
yabot/tools/: __init__.py  ask_user.py  create_dir.py  get_skills_dir.py  list_dir.py  read_file.py  registry.py  run_shell.py  util.py  write_file.py
